# DAMP

./: .gitignore  FINAL_SUMMARY.md  PROJECT_SUMMARY.md  README.md  config.py  pyproject.toml  requirements.txt  run.py  test_config.json  test_simple.py  training_visualization_summary.md
dataset/: naturalAMPs_APD2024a.fasta  non-amp.fasta
docs/: ORGANIZATION_SUMMARY.md  PROJECT_STRUCTURE.md  esm_integrate.md  roadmap.md
models/: diffusion_model_enhanced.pth  gnn_scorer.pth  gnn_scorer_enhanced.pth
plots/: training_summary_report.json
results/: generated_sequences_20250825_130928.fasta  generated_sequences_20250825_131859.fasta  generated_sequences_20250825_132555.fasta  generated_sequences_20250828_142748.fasta  generation_results.json  optimized_sequences_20250825_130928.fasta  optimized_sequences_20250825_131859.fasta  optimized_sequences_20250825_132555.fasta  optimized_sequences_20250828_142748.fasta  top_sequences_20250825_130928.fasta  top_sequences_20250825_131859.fasta  top_sequences_20250825_132555.fasta  top_sequences_20250828_142748.fasta
scripts/: demo.py  hftest.py  main.py
src/: __init__.py  data.py  evaluator.py  generator.py  models.py  trainer.py
test/: run_tests.py  test_data_loading.py  test_enhanced_training.py  test_generation.py  test_improved.py  test_model_comparison.py
visualization/: advanced_plotting.py  plot_training_curves.py
