[project]
name = "damp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bio>=1.8.0",
    "matplotlib>=3.10.5",
    "protobuf>=6.32.0",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "setuptools>=80.9.0",
    "torch>=2.8.0",
    "transformers>=4.55.4",
    "typing-extensions>=4.14.1",
]
